--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
         completions."
     </string>
     <string name="title_activity_homepage">Homepage</string>
+    <string name="title_activity_choose_clinic">Map</string>
 </resources>
