Added Maps and Markers. Added Spinner for selection of clinics.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Hospital Bees</string>
 
-
     <!-- Strings related to login -->
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
@@ -23,6 +22,10 @@
     <string name="estimated_queue_time">Estimated Queue Time</string>
     <string name="estimated_travel_time">Estimated Travel Time</string>
     <string name="estimated_total_time">Estimated Total Time</string>
+    <string name="next">Next</string>
+
+
+
 
     <string name="booking_completed">Booking Completed</string>
     <string name="completion_notice">Please go to My Queue and present the QR code to the clinic to check in. Your Q Number will be allocated for you.</string>
