--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,8 +25,6 @@
     <string name="next">Next</string>
 
 
-
-
     <string name="booking_completed">Booking Completed</string>
     <string name="completion_notice">Please go to My Queue and present the QR code to the clinic to check in. Your Q Number will be allocated for you.</string>
     <string name="back_text">Back</string>
@@ -168,4 +166,8 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+
+    <string name="title_activity_splash">SplashActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
