--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,9 @@
     <string name="view_alerts">Alerts</string>
 
     <!-- Strings related to chooseClinic -->
-    <string name="estimated_queue_time">Estimated Queue Time</string>
-    <string name="estimated_travel_time">Estimated Travel Time</string>
-    <string name="estimated_total_time">Estimated Total Time</string>
+    <string name="queue_length">Queue Length</string>
+    <string name="travel_time">Travel Time</string>
+    <string name="total_time">Total Time</string>
     <string name="next">Next</string>
 
 
