--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="travel_time">Travel Time</string>
     <string name="total_time">Total Time</string>
     <string name="next">Next</string>
+    <string name="minutes">Min</string>
 
 
     <string name="booking_completed">Booking Completed</string>
