--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,8 @@
     <string name="queuenumber_text">Your \'Q\' Number</string>
     <string name="queue_length_before_text">Patients In Front of You</string>
     <string name="queue_length_before_unavailable_text">Unavailable</string>
+    <string name="queue_length_before_approaching_text">You\'ll be Notified shortly</string>
+    <string name="queue_length_before_notified_text">Q Number is Notified!</string>
     <string name="queue_reminder_text_active">Numbers may not be called in order</string>
     <string name="queue_reminder_text_reactivated">Numbers may not be called in order\nNote: Your Booking can be Reactivated only once</string>
 
@@ -197,7 +199,9 @@
 
     <string name="pref_booking_tid_key" translatable="false">tid</string>
     <string name="pref_booking_length_before_key" translatable="false">lengthBefore</string>
-    <string name="pref_booking_miss_time_key" translatable="false">missTime</string>
+    <string name="pref_booking_missed_time_key" translatable="false">missedTime</string>
+    <string name="pref_booking_miss_time_allowed_key" translatable="false">missTimeAllowed</string>
+
 
 
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
