connect choose clinic to hb-node and refactorings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
     <string name="qr_top_reminder_text_absent">Your Current Booking is Absent</string>
     <string name="qr_top_reminder_text_completed">Your Have No Pending Booking :)</string>
     <string name="qr_bottom_reminder_text_no_pending">Press Me to Create a New Booking</string>
-    
+
     <string name="queuenumber_text">Your \'Q\' Number</string>
     <string name="queue_length_before_text">Patients In Front of You</string>
     <string name="queue_length_before_unavailable_text">Unavailable</string>
@@ -202,11 +202,13 @@
     <string name="pref_booking_missed_time_key" translatable="false">missedTime</string>
     <string name="pref_booking_miss_time_allowed_key" translatable="false">missTimeAllowed</string>
 
-    <string name="pref_clinic_name" translatable="false">clinicName</string>
-    <string name="pref_clinic_location" translatable="false">clinicLocation</string>
-
+    <!--<string name="pref_clinic_location" translatable="false">clinicLocation</string>-->
 
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
+
+    <!--Keys for data passed between intents-->
+    <string name="intent_extra_hospital_id_key" translatable="false">bookingHospitalId</string>
+    <string name="intent_extra_hospital_travel_time_key" translatable="false">bookingHospitalTravelTime</string>
 
 
 
