--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
     <string name="view_faq">FAQs</string>
     <string name="view_alerts">Alerts</string>
 
+    <!-- Strings related to locationDuration -->
+    <string name="notice_text">Hello User, this is a warning text to let you know that our services currently only include areas in the west. Thank you for your understanding and we are sorry for the inconvenience!</string>
+
+
     <!-- Strings related to chooseClinic -->
     <string name="queue_length">Queue Length</string>
     <string name="travel_time">Travel Time</string>
